tests/baselines/reference/jsxFactoryIdentifierAsParameter.errors.txt
test.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== test.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render(createElement) {
            return <div />;
        }
    }
    